--- a/src/HA.COSMOS.WebApi/App.config
+++ b/src/HA.COSMOS.WebApi/App.config
@@ -1,18 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core"/>
+    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
     <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core" />
+    <!--<section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />-->
   </configSections>
-  <MessageForwardingInCaseOfFaultConfig ErrorQueue="HA.COSMOS.error"/>
-
+  <MessageForwardingInCaseOfFaultConfig ErrorQueue="HA.COSMOS.error" />
   <UnicastBusConfig ForwardReceivedMessagesTo="audit">
     <MessageEndpointMappings>
-      <add Messages="HA.COSMOS.Messages" Endpoint="HA.COSMOS.Worker"/>
+      <add Messages="HA.COSMOS.Messages" Endpoint="HA.COSMOS.Worker" />
     </MessageEndpointMappings>
   </UnicastBusConfig>
-
-  <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <!--<AuditConfig 
+    QueueName="The address to which messages received will be forwarded."
+    OverrideTimeToBeReceived="The time to be received set on forwarded messages, specified as a timespan see http://msdn.microsoft.com/en-us/library/vstudio/se73z7b9.aspx"  />-->
+  <!--Since we detected that you already have forwarding setup we haven't enabled the audit feature.
+Please remove the ForwardReceivedMessagesTo attribute from the UnicastBusConfig and uncomment the AuditConfig section. 
+<AuditConfig QueueName="audit" />-->
 </configuration>
