removed dependency from pre downloaded NSB nd log4net

--- a/src/HA.COSMOS.Services/HA.COSMOS.Services.csproj
+++ b/src/HA.COSMOS.Services/HA.COSMOS.Services.csproj
@@ -66,11 +66,11 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net">
-      <HintPath>..\..\ThirdParty\NServiceBus\v4.6.1\Binaries\log4net.dll</HintPath>
-    </Reference>
     <Reference Include="HA.Common">
       <HintPath>..\..\build\Framework\HA.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -97,6 +97,9 @@
       <Project>{ee7f8213-6441-4ab8-b1ed-f652c907676c}</Project>
       <Name>HA.COSMOS.ValueObjects</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
