--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -6,6 +6,7 @@
   <repository path="..\HA.COSMOS.Messages\packages.config" />
   <repository path="..\HA.COSMOS.Mongo.DAL\packages.config" />
   <repository path="..\HA.COSMOS.Service.MessageHandlers\packages.config" />
+  <repository path="..\HA.COSMOS.Services\packages.config" />
   <repository path="..\HA.COSMOS.ValueObjects\packages.config" />
   <repository path="..\HA.COSMOS.WebApi\packages.config" />
   <repository path="..\HA.COSMOS.Worker.MessageHandlers.Tests\packages.config" />
