--- a/src/HA.COSMOS.Worker/HA.COSMOS.Worker.csproj
+++ b/src/HA.COSMOS.Worker/HA.COSMOS.Worker.csproj
@@ -69,11 +69,11 @@
     <Reference Include="HA.NServiceBus.Utilities">
       <HintPath>..\..\build\Framework\HA.NServiceBus.Utilities.dll</HintPath>
     </Reference>
-    <Reference Include="log4net">
-      <HintPath>..\..\ThirdParty\NServiceBus\v4.6.1\Binaries\log4net.dll</HintPath>
-    </Reference>
     <Reference Include="HA.Common">
       <HintPath>..\..\build\Framework\HA.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
     </Reference>
     <Reference Include="NServiceBus.Core">
       <HintPath>..\packages\NServiceBus.5.2.0\lib\net45\NServiceBus.Core.dll</HintPath>
