Adding SignalR for Research

--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\COSMOSClientASP\packages.config" />
   <repository path="..\COSMOSClientConsole\packages.config" />
   <repository path="..\HA.Common\packages.config" />
   <repository path="..\HA.Contracts\packages.config" />
@@ -15,4 +16,5 @@
   <repository path="..\HA.NServiceBus.Utilities\packages.config" />
   <repository path="..\HA.WCF.COSMOS\packages.config" />
   <repository path="..\HA.Wcf.Messages\packages.config" />
+  <repository path="..\SignalRSelfHost\packages.config" />
 </repositories>
