--- a/src/HA.COSMOS.Worker/App.config
+++ b/src/HA.COSMOS.Worker/App.config
@@ -3,8 +3,9 @@
   <configSections>
     <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
     <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core" />
+    <section name="TransportConfig" 
+             type="NServiceBus.Config.TransportConfig, NServiceBus.Core"/>
     <section name="MessageHandlerOrder" type="System.Configuration.SingleTagSectionHandler" />
-    <!--<section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />-->
     <!--<section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />-->
   </configSections>
   <UnicastBusConfig ForwardReceivedMessagesTo="audit">
@@ -13,6 +14,9 @@
     </MessageEndpointMappings>
   </UnicastBusConfig>
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="HA.COSMOS.error" />
+  <TransportConfig MaximumConcurrencyLevel="5" 
+                 MaxRetries="2" 
+                 MaximumMessageThroughputPerSecond="0"/>
   <MessageHandlerOrder Order1="HA.COSMOS.MessageHandlers, HA.COSMOS.MessageHandlers.DoJob4" Order2="HA.COSMOS.MessageHandlers, HA.COSMOS.MessageHandlers.DoJob1" Order3="HA.COSMOS.MessageHandlers, HA.COSMOS.MessageHandlers.DoJob3" Order4="HA.COSMOS.MessageHandlers, HA.COSMOS.MessageHandlers.DoJob2" />
   <!--<AuditConfig 
     QueueName="The address to which messages received will be forwarded."
