1) Corrected Exception handling in DAL, 2) Corrected Update 3) Logs are distributor ready

--- a/src/HA.WCF.COSMOS/App.config
+++ b/src/HA.WCF.COSMOS/App.config
@@ -7,7 +7,7 @@
   </configSections>
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="HA.WCF.COSMOS.error"/>
 
-  <UnicastBusConfig ForwardReceivedMessagesTo="audit">
+  <UnicastBusConfig ForwardReceivedMessagesTo="HA.COSMOS.audit">
     <MessageEndpointMappings>
       <add Messages="HA.COSMOS.Messages" Endpoint="risco.rsp.rmac.worker"/>
     </MessageEndpointMappings>
