--- a/src/COSMOSClientConsole/COSMOSClientConsole.csproj
+++ b/src/COSMOSClientConsole/COSMOSClientConsole.csproj
@@ -110,7 +110,9 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HA.COSMOS.ValueObjects\HA.COSMOS.ValueObjects.csproj">
