--- a/src/HA.COSMOS.WebApi/App.config
+++ b/src/HA.COSMOS.WebApi/App.config
@@ -6,7 +6,7 @@
     <!--<section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />-->
   </configSections>
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="HA.COSMOS.error" />
-  <UnicastBusConfig ForwardReceivedMessagesTo="audit">
+  <UnicastBusConfig ForwardReceivedMessagesTo="HA.COSMOS.audit">
     <MessageEndpointMappings>
       <add Messages="HA.COSMOS.Messages" Endpoint="HA.COSMOS.Worker" />
     </MessageEndpointMappings>
@@ -19,7 +19,7 @@
     OverrideTimeToBeReceived="The time to be received set on forwarded messages, specified as a timespan see http://msdn.microsoft.com/en-us/library/vstudio/se73z7b9.aspx"  />-->
   <!--Since we detected that you already have forwarding setup we haven't enabled the audit feature.
 Please remove the ForwardReceivedMessagesTo attribute from the UnicastBusConfig and uncomment the AuditConfig section. 
-<AuditConfig QueueName="audit" />-->
+<AuditConfig QueueName="HA.COSMOS.audit" />-->
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
