--- a/src/HA.COSMOS.Worker/App.config
+++ b/src/HA.COSMOS.Worker/App.config
@@ -8,7 +8,7 @@
     <section name="MessageHandlerOrder" type="System.Configuration.SingleTagSectionHandler" />
     <!--<section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />-->
   </configSections>
-  <UnicastBusConfig ForwardReceivedMessagesTo="audit">
+  <UnicastBusConfig ForwardReceivedMessagesTo="HA.COSMOS.audit">
     <MessageEndpointMappings>
       <add Messages="HA.COSMOS.Messages" Endpoint="HA.COSMOS.Worker" />
     </MessageEndpointMappings>
@@ -17,17 +17,21 @@
   <TransportConfig MaximumConcurrencyLevel="5" 
                  MaxRetries="2" 
                  MaximumMessageThroughputPerSecond="0"/>
-  <MessageHandlerOrder Order1="HA.COSMOS.MessageHandlers, HA.COSMOS.MessageHandlers.DoJob4" Order2="HA.COSMOS.MessageHandlers, HA.COSMOS.MessageHandlers.DoJob1" Order3="HA.COSMOS.MessageHandlers, HA.COSMOS.MessageHandlers.DoJob3" Order4="HA.COSMOS.MessageHandlers, HA.COSMOS.MessageHandlers.DoJob2" />
+  <MessageHandlerOrder 
+    Order1="HA.COSMOS.MessageHandlers, HA.COSMOS.MessageHandlers.DoJob4" 
+    Order2="HA.COSMOS.MessageHandlers, HA.COSMOS.MessageHandlers.DoJob1" 
+    Order3="HA.COSMOS.MessageHandlers, HA.COSMOS.MessageHandlers.DoJob3" 
+    Order4="HA.COSMOS.MessageHandlers, HA.COSMOS.MessageHandlers.DoJob2" />
   <!--<AuditConfig 
     QueueName="The address to which messages received will be forwarded."
     OverrideTimeToBeReceived="The time to be received set on forwarded messages, specified as a timespan see http://msdn.microsoft.com/en-us/library/vstudio/se73z7b9.aspx"  />-->
   <!--Since we detected that you already have forwarding setup we haven't enabled the audit feature.
 Please remove the ForwardReceivedMessagesTo attribute from the UnicastBusConfig and uncomment the AuditConfig section. 
-<AuditConfig QueueName="audit" />-->
+<AuditConfig QueueName="HA.COSMOS.audit" />-->
   <!--<AuditConfig 
     QueueName="The address to which messages received will be forwarded."
     OverrideTimeToBeReceived="The time to be received set on forwarded messages, specified as a timespan see http://msdn.microsoft.com/en-us/library/vstudio/se73z7b9.aspx"  />-->
   <!--Since we detected that you already have forwarding setup we haven't enabled the audit feature.
 Please remove the ForwardReceivedMessagesTo attribute from the UnicastBusConfig and uncomment the AuditConfig section. 
-<AuditConfig QueueName="audit" />-->
+<AuditConfig QueueName="HA.COSMOS.audit" />-->
 </configuration>
