--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -13,6 +13,8 @@
   <repository path="..\HA.COSMOS.Worker.MessageHandlers.Tests\packages.config" />
   <repository path="..\HA.COSMOS.Worker.MessageHandlers\packages.config" />
   <repository path="..\HA.COSMOS.Worker\packages.config" />
+  <repository path="..\HA.COSMOS.Worker1\packages.config" />
+  <repository path="..\HA.COSMOS.Worker2\packages.config" />
   <repository path="..\HA.NServiceBus.Utilities\packages.config" />
   <repository path="..\HA.WCF.COSMOS\packages.config" />
   <repository path="..\HA.Wcf.Messages\packages.config" />
